version/0.12/_sources/api/solver/_autosummary/settings/report_plots_child.rst.txt
:orphan:

.. _report_plots_child:

report_plots_child
==================

.. currentmodule:: ansys.fluent.core.solver.settings_231.report_plots_child

.. autoclass:: report_plots_child
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

============================================================   =======================================================

Child                                                                                                          Summary

============================================================   =======================================================
:ref:`name <name_1>`                                                                                     'name' child.

:ref:`plot_window <plot_window>`                                                                  'plot_window' child.

:ref:`old_props <old_props>`                                                                        'old_props' child.

:ref:`frequency <frequency>`                                       Specify how often convergence checks are performed.

:ref:`flow_frequency <flow_frequency>`                                                         'flow_frequency' child.

:ref:`frequency_of <frequency_of>`                                                               'frequency_of' child.

:ref:`report_defs <report_defs>`                                                                  'report_defs' child.

:ref:`print <print_1>`                                                                                  'print' child.

:ref:`title <title>`                                                                                    'title' child.

:ref:`x_label <x_label>`                                                                              'x_label' child.

:ref:`y_label <y_label>`                                                                              'y_label' child.

:ref:`active <active>`                                                                                 'active' child.

:ref:`plot_instantaneous_values <plot_instantaneous_values>`                        'plot_instantaneous_values' child.

============================================================   =======================================================

.. rubric:: Included in:

==================================   =========================

Parent                                                 Summary

==================================   =========================
:ref:`report_plots <report_plots>`       'report_plots' child.

==================================   =========================

