version/0.19/_sources/api/solver/_autosummary/settings/report_plots_child.rst.txt
:orphan:

.. _report_plots_child:

report_plots_child
==================

.. autoclass:: ansys.fluent.core.solver.settings_241.report_plots_child.report_plots_child
    :show-inheritance:

.. rubric:: Attributes

============================================================   =======================================================

Attribute                                                                                                      Summary

============================================================   =======================================================
:ref:`name <name_1>`                                                                                     'name' child.

:ref:`plot_window <plot_window>`                                                                  'plot_window' child.

:ref:`frequency <frequency>`                                       Specify how often convergence checks are performed.

:ref:`flow_frequency <flow_frequency>`                                                         'flow_frequency' child.

:ref:`frequency_of <frequency_of>`                                                               'frequency_of' child.

:ref:`report_defs <report_defs>`                                                                  'report_defs' child.

:ref:`print <print_3>`                                                                                  'print' child.

:ref:`title <title>`                                                                                    'title' child.

:ref:`x_label <x_label>`                                                                              'x_label' child.

:ref:`y_label <y_label>`                                                                              'y_label' child.

:ref:`active <active>`                                                                                 'active' child.

:ref:`plot_instantaneous_values <plot_instantaneous_values>`                        'plot_instantaneous_values' child.

:ref:`axes <axes>`                                                                                    Axes-properties.

:ref:`curves <curves>`                                                                                 'curves' child.

============================================================   =======================================================

.. rubric:: Methods

====================   ============================

Method                                      Summary

====================   ============================
:ref:`plot <plot_2>`       Display the report-plot.

====================   ============================

.. rubric:: Included in:

==================================   =========================

Parent                                                 Summary

==================================   =========================
:ref:`report_plots <report_plots>`       'report_plots' child.

==================================   =========================

